--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -31,6 +31,7 @@
     "fields": "Ключевые поля",
     "materials": "Материалы",
     "progress": "Прогресс процесса",
+    "progress_help": "Каждый этап показывает процент выполнения от 0 до 100.",
     "currentPdf": "Текущий PDF заказа",
     "no_file": "Файл отсутствует.",
     "attach_help": "Вставьте путь к PDF в static/files/…",
