--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -106,5 +106,25 @@
     "station_label": "Станция",
     "progress_label": "Прогресс (%)",
     "log": "Записать"
+  },
+  "calendar": {
+    "title": "Календарь",
+    "loading_mode": "Режим загрузки",
+    "capacity": "Вместимость",
+    "note": "Заметка",
+    "loading_day": "День загрузки"
+  },
+  "orderform": {
+    "title": "Новый заказ",
+    "pdf": "Предпросмотр PDF",
+    "basics": "Основное",
+    "materials": "Цвета и материалы",
+    "po": "Номер заказа (уникальный)",
+    "client": "Клиент",
+    "order_title": "Название",
+    "due": "Срок",
+    "loading": "Дата загрузки",
+    "add_section": "Добавить секцию",
+    "create": "Создать заказ"
   }
 }
