--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -126,5 +126,18 @@
     "loading": "Дата загрузки",
     "add_section": "Добавить секцию",
     "create": "Создать заказ"
+  },
+  "chat": {
+    "rooms": "Комнаты",
+    "message_placeholder": "Сообщение (используйте @name для упоминания)"
+  },
+  "loading": {
+    "assign": "Назначить",
+    "schedule": "Расписание",
+    "export_csv": "Экспорт CSV",
+    "updated": "Дата загрузки обновлена"
+  },
+  "users": {
+    "current": "Пользователь"
   }
 }
