--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -139,5 +139,33 @@
   },
   "users": {
     "current": "Пользователь"
+  },
+  "rework": {
+    "send": "Отправить на доработку",
+    "reason": "Причина",
+    "note": "Заметка для производства",
+    "x_repeat": "повтор",
+    "reasons": {
+      "RECUT": "Повторная резка",
+      "RESAND": "Повторное шлифование",
+      "REBEND": "Повторный гиб",
+      "REWELD": "Повторная сварка",
+      "REPAINT": "Повторная окраска",
+      "REASSEMBLE": "Повторная сборка",
+      "RECHECK": "Повторная проверка",
+      "CUSTOM": "Другое"
+    }
+  },
+  "rd": {
+    "flag": "Заказ R&D",
+    "notes": "Заметки R&D (видны всем станциям)"
+  },
+  "stages": {
+    "NOT_STARTED": "Не начато",
+    "QUEUED": "В очереди",
+    "IN_PROGRESS": "Выполняется",
+    "BLOCKED": "Заблокировано",
+    "REWORK": "Доработка",
+    "COMPLETED": "Завершено"
   }
 }
